# rl_salamandra_alignment

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE copy  MANIFEST.in  Makefile  README.md  README.rst  old_README.md  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
deepspeed/: zero_3_mn5_config.json
docs/: Makefile  conf.py  index.rst  make.bat
src/rl_salamandra_alignment/: __init__.py  cli.py  convert_dataset.py  fill_template.py  generate_scripts.py  rl_salamandra_alignment.py
src/rl_salamandra_alignment/distributed_configs/: __init__.py
src/rl_salamandra_alignment/templates/: __init__.py  distributed_run_rl_multinode.sh  evaluation_harness.sh  launch_rl_multinode.sh
src/rl_salamandra_alignment/templates/backup/: distributed_run_rl_multinode.sh  evaluation_harness.sh
src/rl_salamandra_alignment/trl_scripts/: __init__.py  cpo.py  dpo.py  dpo_online.py  grpo.py  grpo_rlvr.py  orpo.py  reward_modeling.py  sft.py  sft_video_llm.py  sft_vlm.py
src/rl_salamandra_alignment/trl_scripts/ppo/: ppo.py
src/rl_salamandra_alignment/trl_scripts/rloo/: rloo.py  rloo_tldr.py
src/rl_salamandra_alignment/utils/: __init__.py  general.py  job_submission.py
templates/: distributed_run_rl_multinode.sh  launch_rl_multinode.sh
templates/backup/: launch_rl_multinode.sh
tests/: __init__.py  test_rl_salamandra_alignment.py
trl_scripts/: bco.py  dpo.py  dpo_online.py  dpo_vlm.py  gkd.py  kto.py  nash_md.py  xpo.py
trl_scripts/ppo/: ppo_tldr.py
trl_scripts/rloo/: rloo.py
